@startuml

' --- STYLING ---
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

package "Member 1: Security & Auth" {
    class User {
        - Long id
        - String email
        - String password
        - String fullName
        - Boolean enabled
        + Collection<Role> getRoles()
    }

    class Role {
        - Long id
        - String name
    }
}

package "Member 3: Logistics & Registration" {
    class Room {
        - Long id
        - String name
        - Integer capacity
    }

    class ConferenceRegistration {
        - Long id
        - LocalDateTime registrationDate
        - String ticketType
        + void confirmPayment()
    }
}

package "Member 2: Main Entities (Sessions & Papers)" {
    class Session {
        - Long id
        - String title
        - String description
        - LocalDateTime startTime
        - LocalDateTime endTime
        + void assignChair(User chair)
        + void addPaper(Paper paper)
    }

    class Paper {
        - Long id
        - String title
        - String abstractText
        - String status
        + void approve()
        + void reject()
    }
}

' --- RELATIONSHIPS ---

' User has many Roles (Many-to-Many)
User "*" -- "*" Role : has >

' A User (Author) submits many Papers
User "1" -- "*" Paper : submits >

' A User (Chair) manages a Session (One-to-Many or One-to-One)
User "1" -- "0..*" Session : chairs >

' A User has one Registration
User "1" -- "0..1" ConferenceRegistration : registers via >

' A Session is held in one Room
Room "1" -- "0..*" Session : hosts >

' A Session contains many Papers
Session "1" -- "0..*" Paper : includes >

' Note: A paper belongs to a session ONLY after acceptance
Paper "*" -- "0..1" Session : presented in >

@enduml